--- a/analysis/inbody.ipynb
+++ b/analysis/inbody.ipynb
@@ -14,13 +14,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "outputs": [],
+   "execution_count": 36,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-08-24 13:08:35.893115: success for request [https://raw.githubusercontent.com/kickscar/HELLCHANG-PRACTICES/main/InBody.md]\n",
+      "['## 2021.07.01', '#### WT : 60.1(kg)', '#### SMM: 28.4(kg)', '#### BFM:  9.1(kg)', '#### PBF: 15.2(%)', '## 2021.09.24', '#### WT : 60.2(kg)', '#### SMM: 29.3(kg)', '#### BFM:  7.9(kg)', '#### PBF: 13.2(%)', '## 2021.10.14', '#### WT : 60.8(kg)', '#### SMM: 29.9(kg)', '#### BFM:  7.3(kg)', '#### PBF: 12.1(%)', '## 2021.12.23', '#### WT : 63.4(kg)', '#### SMM: 30.3(kg)', '#### BFM:  9.3(kg)', '#### PBF: 14.7(%)', '## 2022.05.30', '#### WT : 63.7(kg)', '#### SMM: 30.8(kg)', '#### BFM:  8.6(kg)', '#### PBF: 13.5(%)', '## 2022.07.13', '#### WT : 63.6(kg)', '#### SMM: 31.2(kg)', '#### BFM:  8.1(kg)', '#### PBF: 12.8(%)', '## 2022.07.20', '#### WT : 64.5(kg)', '#### SMM: 32.0(kg)', '#### BFM:  8.1(kg)', '#### PBF: 12.5(%)']\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
     "from utils import crawling, clean_strings, filters, seperate_value\n",
     "\n",
-    "def fetch_inbody():\n",
-    "    return list(filter(\n",
+    "results_fetch = list(filter(\n",
     "        lambda s: s.startswith('#'),\n",
     "        filters(\n",
     "            crawling(\n",
@@ -29,18 +38,10 @@
     "            lambda lines: [] if lines is None else lines.split('\\n'),\n",
     "            lambda s: clean_strings(s, str.strip))))\n",
     "\n",
+    "if len(results_fetch) == 0:\n",
+    "    sys.exit(0)\n",
     "\n",
-    "def arrange_fetch_inbody(records):\n",
-    "    results = []\n",
-    "\n",
-    "    for record in records:\n",
-    "        if record.startswith('####'):\n",
-    "            item, value = (s.strip() for s in record.replace('####', '').strip().split(':'))\n",
-    "            results.append((date, item, *seperate_value(value)))\n",
-    "        elif record.startswith('##'):\n",
-    "            date = record.replace('##', '').strip()\n",
-    "\n",
-    "    return results"
+    "print(results_fetch)"
    ],
    "metadata": {
     "collapsed": false,
@@ -51,28 +52,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-08-24 13:02:26.821883: success for request [https://raw.githubusercontent.com/kickscar/HELLCHANG-PRACTICES/main/InBody.md]\n",
-      "['## 2021.07.01', '#### WT : 60.1(kg)', '#### SMM: 28.4(kg)', '#### BFM:  9.1(kg)', '#### PBF: 15.2(%)', '## 2021.09.24', '#### WT : 60.2(kg)', '#### SMM: 29.3(kg)', '#### BFM:  7.9(kg)', '#### PBF: 13.2(%)', '## 2021.10.14', '#### WT : 60.8(kg)', '#### SMM: 29.9(kg)', '#### BFM:  7.3(kg)', '#### PBF: 12.1(%)', '## 2021.12.23', '#### WT : 63.4(kg)', '#### SMM: 30.3(kg)', '#### BFM:  9.3(kg)', '#### PBF: 14.7(%)', '## 2022.05.30', '#### WT : 63.7(kg)', '#### SMM: 30.8(kg)', '#### BFM:  8.6(kg)', '#### PBF: 13.5(%)', '## 2022.07.13', '#### WT : 63.6(kg)', '#### SMM: 31.2(kg)', '#### BFM:  8.1(kg)', '#### PBF: 12.8(%)', '## 2022.07.20', '#### WT : 64.5(kg)', '#### SMM: 32.0(kg)', '#### BFM:  8.1(kg)', '#### PBF: 12.5(%)']\n",
       "[('2021.07.01', 'WT', 60.1, 'kg'), ('2021.07.01', 'SMM', 28.4, 'kg'), ('2021.07.01', 'BFM', 9.1, 'kg'), ('2021.07.01', 'PBF', 15.2, '%'), ('2021.09.24', 'WT', 60.2, 'kg'), ('2021.09.24', 'SMM', 29.3, 'kg'), ('2021.09.24', 'BFM', 7.9, 'kg'), ('2021.09.24', 'PBF', 13.2, '%'), ('2021.10.14', 'WT', 60.8, 'kg'), ('2021.10.14', 'SMM', 29.9, 'kg'), ('2021.10.14', 'BFM', 7.3, 'kg'), ('2021.10.14', 'PBF', 12.1, '%'), ('2021.12.23', 'WT', 63.4, 'kg'), ('2021.12.23', 'SMM', 30.3, 'kg'), ('2021.12.23', 'BFM', 9.3, 'kg'), ('2021.12.23', 'PBF', 14.7, '%'), ('2022.05.30', 'WT', 63.7, 'kg'), ('2022.05.30', 'SMM', 30.8, 'kg'), ('2022.05.30', 'BFM', 8.6, 'kg'), ('2022.05.30', 'PBF', 13.5, '%'), ('2022.07.13', 'WT', 63.6, 'kg'), ('2022.07.13', 'SMM', 31.2, 'kg'), ('2022.07.13', 'BFM', 8.1, 'kg'), ('2022.07.13', 'PBF', 12.8, '%'), ('2022.07.20', 'WT', 64.5, 'kg'), ('2022.07.20', 'SMM', 32.0, 'kg'), ('2022.07.20', 'BFM', 8.1, 'kg'), ('2022.07.20', 'PBF', 12.5, '%')]\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
+    "results_arrange = []\n",
     "\n",
-    "results_fetch = fetch_inbody()\n",
-    "print(results_fetch)\n",
+    "for record in results_fetch:\n",
+    "    if record.startswith('####'):\n",
+    "        item, value = (s.strip() for s in record.replace('####', '').strip().split(':'))\n",
+    "        results_arrange.append((date, item, *seperate_value(value)))\n",
+    "    elif record.startswith('##'):\n",
+    "        date = record.replace('##', '').strip()\n",
     "\n",
-    "if len(results_fetch) == 0:\n",
-    "    sys.exit(0)\n",
-    "\n",
-    "results_arrange = arrange_fetch_inbody(results_fetch)\n",
     "print(results_arrange)"
    ],
    "metadata": {
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "outputs": [
     {
      "name": "stdout",
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "outputs": [
     {
      "data": {
