--- a/analysis/inbody.graph.ipynb
+++ b/analysis/inbody.graph.ipynb
@@ -19,34 +19,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 571,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-08-24 17:22:50.629606: success for request [https://raw.githubusercontent.com/kickscar/HELLCHANG-PRACTICES/main/InBody.md]\n",
+      "2022-08-25 09:52:21.196988: success for request [https://raw.githubusercontent.com/kickscar/HELLCHANG-PRACTICES/main/InBody.md]\n",
       "['## 2021.07.01', '#### WT : 60.1(kg)', '#### SMM: 28.4(kg)', '#### BFM:  9.1(kg)', '#### PBF: 15.2(%)', '## 2021.09.24', '#### WT : 60.2(kg)', '#### SMM: 29.3(kg)', '#### BFM:  7.9(kg)', '#### PBF: 13.2(%)', '## 2021.10.14', '#### WT : 60.8(kg)', '#### SMM: 29.9(kg)', '#### BFM:  7.3(kg)', '#### PBF: 12.1(%)', '## 2021.12.23', '#### WT : 63.4(kg)', '#### SMM: 30.3(kg)', '#### BFM:  9.3(kg)', '#### PBF: 14.7(%)', '## 2022.05.30', '#### WT : 63.7(kg)', '#### SMM: 30.8(kg)', '#### BFM:  8.6(kg)', '#### PBF: 13.5(%)', '## 2022.07.13', '#### WT : 63.6(kg)', '#### SMM: 31.2(kg)', '#### BFM:  8.1(kg)', '#### PBF: 12.8(%)', '## 2022.07.20', '#### WT : 64.5(kg)', '#### SMM: 32.0(kg)', '#### BFM:  8.1(kg)', '#### PBF: 12.5(%)']\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "from utils import crawling, clean_strings, filters, seperate_value\n",
+    "from utils import crawling, filters, strsclean\n",
     "\n",
-    "results_fetch = list(filter(\n",
+    "resfetch = list(filter(\n",
     "        lambda s: s.startswith('#'),\n",
     "        filters(\n",
-    "            crawling(\n",
-    "                f'https://raw.githubusercontent.com/kickscar/HELLCHANG-PRACTICES/main/InBody.md',\n",
-    "                err=lambda e: None),\n",
+    "            crawling('https://raw.githubusercontent.com/kickscar/HELLCHANG-PRACTICES/main/InBody.md'),\n",
     "            lambda lines: [] if lines is None else lines.split('\\n'),\n",
-    "            lambda s: clean_strings(s, str.strip))))\n",
+    "            lambda s: strsclean(s, str.strip))))\n",
     "\n",
-    "if len(results_fetch) == 0:\n",
+    "if len(resfetch) == 0:\n",
     "    sys.exit(0)\n",
     "\n",
-    "print(results_fetch)"
+    "print(resfetch)"
    ],
    "metadata": {
     "collapsed": false,
@@ -57,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 572,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -68,16 +66,19 @@
     }
    ],
    "source": [
-    "results_arrange = []\n",
+    "import re\n",
     "\n",
-    "for record in results_fetch:\n",
-    "    if record.startswith('####'):\n",
-    "        item, value = (s.strip() for s in record.replace('####', '').strip().split(':'))\n",
-    "        results_arrange.append((date, item, *seperate_value(value)))\n",
-    "    elif record.startswith('##'):\n",
-    "        date = record.replace('##', '').strip()\n",
+    "resarrange = []\n",
     "\n",
-    "print(results_arrange)"
+    "for res in resfetch:\n",
+    "    if res.startswith('####'):\n",
+    "        item, val = (s.strip() for s in res.replace('####', '').strip().split(':'))\n",
+    "        sval, unit = re.compile(r'(\\d+.\\d*)\\s*(.*)').match(re.sub(r\"[\\([{})\\]\\s]\", \"\", val)).groups()\n",
+    "        resarrange.append((date, item, float(sval), unit))\n",
+    "    elif res.startswith('##'):\n",
+    "        date = res.replace('##', '').strip()\n",
+    "\n",
+    "print(resarrange)"
    ],
    "metadata": {
     "collapsed": false,
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -103,7 +104,7 @@
     "from datetime import datetime\n",
     "\n",
     "dataset_x, dataset_y, d, key = [], {}, '', ''\n",
-    "for result in results_arrange:\n",
+    "for result in resarrange:\n",
     "    if d != result[0]:\n",
     "        d = result[0]\n",
     "        dataset_x.append(datetime.strptime(d, '%Y.%m.%d'))\n",
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 574,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -138,7 +139,6 @@
     }
    ],
    "source": [
-    "from matplotlib.pyplot import figure\n",
     "from itertools import cycle\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
@@ -156,15 +156,14 @@
     "subplot.set_xticks(dataset_x_days)\n",
     "subplot.set_xticklabels(dataset_x_fdates, fontsize=9)\n",
     "\n",
-    "twinx = None\n",
     "for key in dataset_y.keys():\n",
-    "    twinx = (subplot if twinx is None else twinx).twinx()\n",
+    "    tx = subplot.twinx()\n",
     "\n",
-    "    twinx.set_yticks([])\n",
-    "    line, = twinx.plot(dataset_x_days, dataset_y[key]['values'], 'o-', color=next(cycol), label=f\"{key}({dataset_y[key]['unit']})\")\n",
+    "    tx.set_yticks([])\n",
+    "    line, = tx.plot(dataset_x_days, dataset_y[key]['values'], 'o-', color=next(cycol), label=f\"{key}({dataset_y[key]['unit']})\")\n",
     "\n",
     "    for idx, yv in enumerate(dataset_y[key]['values']):\n",
-    "        twinx.annotate(str(yv), xy=(dataset_x_days[idx], yv), xytext=(-10, 5), textcoords='offset points')\n",
+    "        tx.annotate(str(yv), xy=(dataset_x_days[idx], yv), xytext=(-10, 5), textcoords='offset points')\n",
     "\n",
     "    legendhandles.append(line)\n",
     "\n",
