--- a/analysis/inbody.graph.ipynb
+++ b/analysis/inbody.graph.ipynb
@@ -20,26 +20,58 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "import ssl\n",
+    "from urllib.request import Request, urlopen\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def crawling(url='', encoding='utf-8', err=lambda e: print(f'{e} : {datetime.now()}', file=sys.stderr)):\n",
+    "    try:\n",
+    "        req = Request(url)\n",
+    "        ssl._create_default_https_context = ssl._create_unverified_context\n",
+    "\n",
+    "        resp = urlopen(req)\n",
+    "        recv = resp.read().decode(encoding, errors='replace')\n",
+    "\n",
+    "        print(f'{datetime.now()}: success for request [{url}]')\n",
+    "        return recv\n",
+    "    except Exception as e:\n",
+    "        err(e)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-08-25 09:52:21.196988: success for request [https://raw.githubusercontent.com/kickscar/HELLCHANG-PRACTICES/main/InBody.md]\n",
+      "2022-08-26 13:43:58.333542: success for request [https://raw.githubusercontent.com/kickscar/HELLCHANG-PRACTICES/main/InBody.md]\n",
       "['## 2021.07.01', '#### WT : 60.1(kg)', '#### SMM: 28.4(kg)', '#### BFM:  9.1(kg)', '#### PBF: 15.2(%)', '## 2021.09.24', '#### WT : 60.2(kg)', '#### SMM: 29.3(kg)', '#### BFM:  7.9(kg)', '#### PBF: 13.2(%)', '## 2021.10.14', '#### WT : 60.8(kg)', '#### SMM: 29.9(kg)', '#### BFM:  7.3(kg)', '#### PBF: 12.1(%)', '## 2021.12.23', '#### WT : 63.4(kg)', '#### SMM: 30.3(kg)', '#### BFM:  9.3(kg)', '#### PBF: 14.7(%)', '## 2022.05.30', '#### WT : 63.7(kg)', '#### SMM: 30.8(kg)', '#### BFM:  8.6(kg)', '#### PBF: 13.5(%)', '## 2022.07.13', '#### WT : 63.6(kg)', '#### SMM: 31.2(kg)', '#### BFM:  8.1(kg)', '#### PBF: 12.8(%)', '## 2022.07.20', '#### WT : 64.5(kg)', '#### SMM: 32.0(kg)', '#### BFM:  8.1(kg)', '#### PBF: 12.5(%)']\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "from utils import crawling, filters, strsclean\n",
+    "from functools import reduce\n",
+    "from utils import crawling\n",
     "\n",
     "resfetch = list(filter(\n",
-    "        lambda s: s.startswith('#'),\n",
-    "        filters(\n",
-    "            crawling('https://raw.githubusercontent.com/kickscar/HELLCHANG-PRACTICES/main/InBody.md'),\n",
-    "            lambda lines: [] if lines is None else lines.split('\\n'),\n",
-    "            lambda s: strsclean(s, str.strip))))\n",
+    "    lambda s: s.startswith('#'),\n",
+    "    reduce(\n",
+    "        lambda param, func: func(param),\n",
+    "        [lambda txt: [] if txt is None else txt.split('\\n'), lambda strs: [f(s) for f in [str.strip] for s in strs]],\n",
+    "        crawling('https://raw.githubusercontent.com/kickscar/HELLCHANG-PRACTICES/main/InBody.md')\n",
+    "    )\n",
+    "))\n",
     "\n",
     "if len(resfetch) == 0:\n",
     "    sys.exit(0)\n",
@@ -55,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -89,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -127,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
