--- a/analysis/preproc01.ipynb
+++ b/analysis/preproc01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "## Preprocessing 01 (Working with Sampling)\n",
-    "#### 1. Crawling\n",
+    "#### 1. Aquisition with Crawling\n",
     "#### 2. Tranformation included Cleansing & Denoising\n",
     "#### 3. Imputation"
    ],
