--- a/analytics/preproc01.ipynb
+++ b/analytics/preproc01.ipynb
@@ -21,10 +21,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Load Exercise Dictionary\n",
     "import os\n",
     "import pickle\n",
     "\n",
-    "# load exercise dictionary\n",
     "dictfile = os.path.join(os.getcwd(), '../dataset/', 'exercise-dict.pkl')\n",
     "exercisedict = None\n",
     "with open(dictfile, 'rb') as file:\n",
@@ -42,6 +42,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Acquisition with Crawling\n",
     "import sys\n",
     "import ssl\n",
     "from datetime import datetime\n",
@@ -60,7 +61,7 @@
     "            reduce(\n",
     "                lambda param, func: func(param),\n",
     "                [lambda raw: [] if raw is None else raw.splitlines(), lambda strs: [f(s) for f in [str.strip] for s in strs]],\n",
-    "                urlopen(Request('https://raw.githubusercontent.com/kickscar/HELLCHANG-PRACTICES/main/training-record/Week0%02d.md' % idx)).read().decode('utf-8', errors='replace')\n",
+    "                urlopen(Request('https://raw.githubusercontent.com/kickscar/HELLCHANG-PRACTICES/main/datasets/Week0%02d.md' % idx)).read().decode('utf-8', errors='replace')\n",
     "            )\n",
     "        ))\n",
     "\n",
@@ -85,7 +86,6 @@
    "outputs": [],
    "source": [
     "# Tranformation\n",
-    "\n",
     "import re\n",
     "\n",
     "restransform = []\n",
@@ -94,13 +94,16 @@
     "        # 1. split exercise name & record\n",
     "        exname, exrecord = (s.strip() for s in res.replace('####', '').strip().split(':'))\n",
     "\n",
-    "        # 2. cleansing exercise name\n",
+    "        # 2. normalize exercise name and equipment\n",
     "        exname = re.sub(r'[\\d+\\\\.]', '', exname).strip()\n",
     "        pttrmatch = re.compile(r'([a-zA-Z\\s\\',]+)\\s*\\[([a-zA-Z\\s\\',]+)\\]').match(exname)\n",
     "        if pttrmatch is not None:\n",
     "            exname, equipment = pttrmatch.groups()\n",
     "            exname = ''.join([exname.strip(), f'[{equipment.strip()}]']).title()\n",
-    "        #    for dictkey in\n",
+    "\n",
+    "            for dictkey in\n",
+    "\n",
+    "        # 3.\n",
     "        # sval, unit = re.compile(r'(\\d+.\\d*)\\s*(.*)').match(re.sub(r\"[\\([{})\\]\\s]\", \"\", val)).groups()\n",
     "\n",
     "        restransform[len(restransform):] = [(date, exname, *re.split(r'\\s+', exrecord.strip()))]\n",
@@ -122,7 +125,6 @@
    "outputs": [],
    "source": [
     "# Which Exercise?\n",
-    "\n",
     "exs = [t[1] for t in restransform]\n",
     "dataset_exs = [(ex, exs.count(ex)) for ex in list(set(exs))]\n",
     "\n",
